Update to version 0.1.13

--- a/inst/doc/RAINBOWR.Rmd
+++ b/inst/doc/RAINBOWR.Rmd
@@ -161,8 +161,8 @@ manhattan(normal.res$D)
 Next, we perform SNP-set GWAS by `RGWAS.multisnp` function.
 
 ``` {r, include=TRUE, message=FALSE}
-### Perform SNP-set GWAS (by regarding 11 SNPs as one SNP-set)
-SNP_set.res <- RGWAS.multisnp(pheno = pheno.GWAS, geno = geno.GWAS, ZETA = ZETA,
+### Perform SNP-set GWAS (by regarding 11 SNPs as one SNP-set, first 300 SNPs)
+SNP_set.res <- RGWAS.multisnp(pheno = pheno.GWAS, geno = geno.GWAS[1:300, ], ZETA = ZETA,
                               plot.qq = FALSE, plot.Manhattan = FALSE, count = FALSE,
                               n.PC = 4, test.method = "LR", kernel.method = "linear", gene.set = NULL,
                               test.effect = "additive", window.size.half = 5, window.slide = 11)
