Update to version 0.1.15

--- a/inst/doc/RAINBOWR.Rmd
+++ b/inst/doc/RAINBOWR.Rmd
@@ -49,9 +49,14 @@ Finally, `RAINBOWR` offers other useful functions.
 - `SS_GWAS` function to summarize GWAS results (only for simulation study)
 
 ## Installation
-`RAINBOWR` is now available on [`GitHub`](https://github.com/KosukeHamazaki/RAINBOWR), so please run the following code in the R console.
+The stable version of `RAINBOWR` is now available at the [CRAN (Comprehensive R Archive Network)](https://cran.r-project.org/web/packages/RAINBOWR/index.html). The latest version of `RAINBOWR` is also available at the `KosukeHamazaki/RAINBOWR` repository in the [`GitHub`](https://github.com/KosukeHamazaki/RAINBOWR), so please run the following code in the R console.
 
-``` {r, include=TRUE, eval=FALSE}
+``` r
+#### Stable version of RAINBOWR ####
+install.packages("RAINBOWR")  
+
+
+#### Latest version of RAINBOWR ####
 ### If you have not installed yet, ...
 install.packages("devtools")  
 
