--- a/vignettes/RAINBOWR.Rmd
+++ b/vignettes/RAINBOWR.Rmd
@@ -49,7 +49,7 @@ Finally, `RAINBOWR` offers other useful functions.
 - `SS_GWAS` function to summarize GWAS results (only for simulation study)
 
 ## Installation
-The stable version of `RAINBOWR` is now available at the [CRAN (Comprehensive R Archive Network)](https://cran.r-project.org/web/packages/RAINBOWR/index.html). The latest version of `RAINBOWR` is also available at the `KosukeHamazaki/RAINBOWR` repository in the [`GitHub`](https://github.com/KosukeHamazaki/RAINBOWR), so please run the following code in the R console.
+The stable version of `RAINBOWR` is now available at the [CRAN (Comprehensive R Archive Network)](https://cran.r-project.org/package=RAINBOWR). The latest version of `RAINBOWR` is also available at the `KosukeHamazaki/RAINBOWR` repository in the [`GitHub`](https://github.com/KosukeHamazaki/RAINBOWR), so please run the following code in the R console.
 
 ``` r
 #### Stable version of RAINBOWR ####
