--- a/inst/doc/RAINBOWR.Rmd
+++ b/inst/doc/RAINBOWR.Rmd
@@ -19,6 +19,14 @@ knitr::opts_chunk$set(
 )
 ```
 
+## NOTE!!!!
+##### The paper for `RAINBOWR` has been published in PLOS Computational Biology (https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1007663). If you use this `RAINBOWR` in your paper, please cite `RAINBOWR` as follows:
+- Hamazaki, K. and Iwata, H. (2020) RAINBOW: Haplotype-based genome-wide association study using a novel SNP-set method. PLOS Computational Biology, 16(2): e1007663.
+
+##### The stable version for `RAINBOWR` package is now available at the [CRAN (Comprehensive R Archive Network)](https://cran.r-project.org/package=RAINBOWR).
+
+
+----------
 
 In this repository, the `R` package `RAINBOWR` is available.
 Here, we describe how to install and how to use `RAINBOWR`.
@@ -47,6 +55,7 @@ Finally, `RAINBOWR` offers other useful functions.
 - `See` function to see a brief view of data (like `head` function, but more useful)
 - `genetrait` function to generate pseudo phenotypic values from marker genotype
 - `SS_GWAS` function to summarize GWAS results (only for simulation study)
+- `estPhylo` and `estNetwork` functions to estimate phylogenetic tree or haplotype network and haplotype effects with non-linear kernels for haplotype blocks of interest.
 
 ## Installation
 The stable version of `RAINBOWR` is now available at the [CRAN (Comprehensive R Archive Network)](https://cran.r-project.org/package=RAINBOWR). The latest version of `RAINBOWR` is also available at the `KosukeHamazaki/RAINBOWR` repository in the [`GitHub`](https://github.com/KosukeHamazaki/RAINBOWR), so please run the following code in the R console.
@@ -65,22 +74,38 @@ devtools::install_github("KosukeHamazaki/RAINBOWR")
 ```
 
 If you get some errors via installation, please check if the following packages are correctly installed.
+(We removed a dependency on `rgl` package!)
 
 
-- Rcpp
+- Rcpp      # install `Rtools` for Windows user
 - RcppEigen
-- rrBLUP
-- rgl
+- plotly
 - tcltk
 - Matrix
 - cluster
 - MASS
+- pbmcapply
+- optimx
+- methods
+- ape
+- stringr
+- pegas
+- ggplot2
+- ggtree      # install from Bioconducter with `BiocManager::install("ggtree")`
+- scatterpie
+- phylobase
+- haplotypes
+- ggimage
+- rrBLUP
+- expm
+- parallel
+- pbapply
+- here
+- htmlwidgets
 
 
 In `RAINBOWR`,  since part of the code is written in `Rcpp` (`C++` in `R`),  please check if you can use `C++` in `R`.
 For `Windows` users,  you should install [`Rtools`](https://cran.r-project.org/bin/windows/Rtools/).
-
-In the near future, we will try to publish `RAINBOWR` on `CRAN`.
 
 If you have some questions about installation, please contact us by e-mail (hamazaki@ut-biomet.org).
 
@@ -234,3 +259,5 @@ Listgarten, J. et al. (2013) A powerful and efficient set test for genetic marke
 Lippert, C. et al. (2014) Greater power and computational efficiency for kernel-based association testing of sets of genetic variants. Bioinformatics. 30(22): 3206-3214.
 
 Jiang, Y. and Reif, J.C. (2015) Modeling epistasis in genomic selection. Genetics. 201(2): 759-768.
+
+Hamazaki, K. and Iwata, H. (2020) RAINBOW: Haplotype-based genome-wide association study using a novel SNP-set method. PLOS Computational Biology, 16(2): e1007663.
