--- a/vignettes/RAINBOWR.Rmd
+++ b/vignettes/RAINBOWR.Rmd
@@ -74,11 +74,12 @@ devtools::install_github("KosukeHamazaki/RAINBOWR")
 ```
 
 If you get some errors via installation, please check if the following packages are correctly installed.
+(We removed a dependency on `rgl` package!)
 
 
 - Rcpp      # install `Rtools` for Windows user
 - RcppEigen
-- rgl       # for Linux user please install required libralies in terminal
+- plotly
 - tcltk
 - Matrix
 - cluster
@@ -99,6 +100,8 @@ If you get some errors via installation, please check if the following packages 
 - expm
 - parallel
 - pbapply
+- here
+- htmlwidgets
 
 
 In `RAINBOWR`,  since part of the code is written in `Rcpp` (`C++` in `R`),  please check if you can use `C++` in `R`.
